--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TextIt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-06 22:47+0000\n"
+"POT-Creation-Date: 2020-09-17 21:58+0000\n"
 "PO-Revision-Date: 2014-04-14 20:37+0000\n"
 "Last-Translator: produtos <produtos.ti@takenet.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/projects/p/textit/language/pt_BR/)\n"
@@ -3470,6 +3470,33 @@ msgstr "Os fluxos para exportar"
 msgid "The search query"
 msgstr ""
 
+msgid "Import file appears to be empty"
+msgstr ""
+
+msgid "Import file contains an empty header"
+msgstr ""
+
+#, python-format
+msgid "Import files can contain a maximum of %(max)d records"
+msgstr ""
+
+msgid "Import file doesn't contain any records"
+msgstr ""
+
+#, python-format
+msgid "Import header %(header)s occurs more than once"
+msgstr ""
+
+#, fuzzy, python-format
+#| msgid "Using a Local Number"
+msgid "%(scheme)s is not a valid URN scheme"
+msgstr "Use um número local"
+
+#, fuzzy, python-format
+#| msgid "Using a Local Number"
+msgid "%(name)s is not a valid field name"
+msgstr "Use um número local"
+
 #, python-format
 msgid "Invalid query syntax at '%(token)s'"
 msgstr ""
@@ -3737,6 +3764,22 @@ msgstr "Atualizar campos"
 #| msgid "Contact Field: %(label)s"
 msgid "Contact field uses"
 msgstr "Campo de contato: %(label)s"
+
+#, python-format
+msgid "Field name for '%(header)s' can't be empty."
+msgstr ""
+
+#, python-format
+msgid "Field name for '%(header)s' matches an existing field."
+msgstr ""
+
+#, python-format
+msgid "Field name for '%(header)s' is invalid or a reserved word."
+msgstr ""
+
+#, python-format
+msgid "Field name '%(name)s' is repeated."
+msgstr ""
 
 #, fuzzy
 msgid "Message flow"
@@ -8653,6 +8696,97 @@ msgstr ""
 msgid "Show Contacts"
 msgstr "Mostrar contatos"
 
+#, fuzzy
+#| msgid "You can import your contacts from an XLS file you create in Excel."
+msgid "You can import your contacts from an XLSX file you create in Excel."
+msgstr "Você pode importar seus contatos de um arquivo XLS criado no Excel."
+
+msgid "Columns starting with the prefix <i>Group:</i> are ignored"
+msgstr ""
+
+#, fuzzy, python-format
+#| msgid ""
+#| "\n"
+#| "                  You can download\n"
+#| "                  <a href='%(STATIC_URL)sexamples/contacts.xls'>this Excel template</a>\n"
+#| "                  as a sample.\n"
+#| "                "
+msgid "You can download <a href=\"%(sample_url)s\">this Excel template</a> as a sample."
+msgstr ""
+"\n"
+"Você pode fazer o download <a href='%(STATIC_URL)sexamples/contacts.xls'> deste modelo do Excel</a>\n"
+"como uma amostra."
+
+#, fuzzy
+#| msgid "Device"
+msgid "Preview"
+msgstr "Dispositivo"
+
+#, fuzzy
+msgid "Preview Contact Import"
+msgstr "1 Contato"
+
+#, python-format
+msgid "This import file contains <strong>%(count)s</strong> records. Headers that didn't match existing fields can be ignored or added as new custom fields by editing them below."
+msgstr ""
+
+#, fuzzy
+#| msgid "What group will be joined"
+msgid "will be ignored"
+msgstr "Qual grupo irá se juntar"
+
+#, fuzzy
+#| msgid "has"
+msgid "as"
+msgstr "tem"
+
+#, fuzzy
+#| msgid "1 field"
+msgid "new field"
+msgstr "1 campo"
+
+msgid "of type"
+msgstr ""
+
+#, fuzzy
+#| msgid "1 field"
+msgid "field"
+msgstr "1 campo"
+
+#, python-format
+msgid "a <strong>%(scheme)s</strong> URN"
+msgstr ""
+
+#, fuzzy
+msgid "Contact Import"
+msgstr "Contatos"
+
+#, fuzzy, python-format
+msgid "Created %(count)s new contact"
+msgid_plural "Created %(count)s new contacts"
+msgstr[0] "Criar grupo de contatos"
+msgstr[1] "Criar grupo de contatos"
+
+#, fuzzy, python-format
+msgid "Updated %(count)s existing contact"
+msgid_plural "Updated %(count)s existing contacts"
+msgstr[0] "Criar grupo de contatos"
+msgstr[1] "Criar grupo de contatos"
+
+#, python-format
+msgid "Ignored %(count)s record because of errors"
+msgid_plural "Ignored %(count)s records because of errors"
+msgstr[0] ""
+msgstr[1] ""
+
+#, fuzzy
+msgid "Errors"
+msgstr "Contagem de erros"
+
+#, python-format
+msgid "Row %(row)s: %(message)s"
+msgstr ""
+
 msgid "Hi there!"
 msgstr "Olá!"
 
@@ -12223,11 +12357,6 @@ msgstr ""
 #~ msgid "instead."
 #~ msgstr "ao invés."
 
-#, fuzzy
-#~| msgid "Device"
-#~ msgid "view"
-#~ msgstr "Dispositivo"
-
 #~ msgid "View Sample Flows"
 #~ msgstr "Visualizar exemplos de fluxos"
 
@@ -14080,9 +14209,6 @@ msgstr ""
 #~ msgid "run"
 #~ msgstr "Domingo"
 
-#~ msgid "1 field"
-#~ msgstr "1 campo"
-
 #~ msgid "{} fields"
 #~ msgstr "{} campos"
 
@@ -15255,10 +15381,6 @@ msgstr ""
 #, fuzzy
 #~ msgid "Restart any of the above contacts already participating in this flow"
 #~ msgstr "Reiniciar qualquer um dos contatos acima que já participam deste fluxo"
-
-#, fuzzy
-#~ msgid "View Contact"
-#~ msgstr "1 Contato"
 
 #, fuzzy
 #~ msgid ""
@@ -16518,6 +16640,3 @@ msgstr ""
 
 #~ msgid "Action Join Group"
 #~ msgstr "Ação juntar ao grupo"
-
-#~ msgid "What group will be joined"
-#~ msgstr "Qual grupo irá se juntar"
