--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TextIt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-15 18:33+0000\n"
+"POT-Creation-Date: 2020-09-15 20:33+0000\n"
 "PO-Revision-Date: 2014-04-14 20:37+0000\n"
 "Last-Translator: produtos <produtos.ti@takenet.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/projects/p/textit/language/pt_BR/)\n"
@@ -2312,55 +2312,55 @@ msgstr ""
 "Adicione facilmente um número de duas vias que você configurou usando as APIs do <a href=\"http://infobip.com\">Infobip</a>."
 
 msgid "Connection to RocketChat is taking too long."
-msgstr ""
+msgstr "A conexão com o Rocket.Chat está demorando muito."
 
 msgid "Unable to configure. Connection to RocketChat is taking too long."
-msgstr ""
+msgstr "Não é possível configurar. A conexão com o Rocket.Chat está demorando muito."
 
 msgid "Add a <a href=\"https://rocket.chat/\">Rocket.Chat</a> bot to send and receive messages to Rocket.Chat users for free. "
-msgstr ""
+msgstr "Adicione um bot <a href=\"https://rocket.chat/\">Rocket.Chat</a> para enviar e receber mensagens para usuários do Rocket.Chat de forma gratuita."
 
 msgid "Setup your RocketChat first to be able to integrate."
-msgstr ""
+msgstr "Configure o Rocket.Chat primeiro para poder integrá-lo."
 
 msgid "Ex.: http://my.rocket.chat/29542a4b-5a89-4f27-872b-5f8091899f7b"
-msgstr ""
+msgstr "Ex.: http://my.rocket.chat/29542a4b-5a89-4f27-872b-5f8091899f7b"
 
 msgid "The URL for your RocketChat Channnel app"
-msgstr ""
+msgstr "A URL para o app do seu Rocket.Chat"
 
 #, fuzzy
 #| msgid "Username"
 msgid "Bot username"
-msgstr "Nome de usuário"
+msgstr "Username do bot"
 
 #, fuzzy
 #| msgid "The name of your organization"
 msgid "The username of your RocketChat app"
-msgstr "Nome da sua organização"
+msgstr "Nome de usuário do seu app Rocket.Chat"
 
 msgid "Secret to be passed to RocketChat"
-msgstr ""
+msgstr "Código a ser inserido no Rocket.Chat"
 
 #, fuzzy
 #| msgid "The Zenvia short code"
 msgid "Invalid secret code."
-msgstr "O número curto da Take.net"
+msgstr "Código secreto inválido."
 
 msgid "Secret code change detected."
-msgstr ""
+msgstr "O código secreto mudou."
 
 #, python-format
 msgid "Invalid URL %(base_url)s"
-msgstr ""
+msgstr "URL inválida: %(base_url)s"
 
 msgid "There is already a channel configured for this URL."
-msgstr ""
+msgstr "Já existe um canal configurado para esta URL"
 
 #, fuzzy
 #| msgid "Configuration"
 msgid "Configuration has failed"
-msgstr "Configuração"
+msgstr "A configuração falhou."
 
 #, fuzzy
 msgid ""
@@ -3441,6 +3441,11 @@ msgstr "ID Externo"
 #, fuzzy
 #| msgid "External ID"
 msgid "VK identifier"
+msgstr "ID Externo"
+
+#, fuzzy
+#| msgid "External ID"
+msgid "Rocket.Chat identifier"
 msgstr "ID Externo"
 
 msgid "Label"
@@ -7775,25 +7780,25 @@ msgstr ""
 
 #, python-format
 msgid "You will need to enable Omnichannel and setup a %(brand)s Channel app on your RocketChat. To do so:"
-msgstr ""
+msgstr "Você precisará habilitar o Omnichannel e configurar um %(brand)s Channel app no seu Rocket.Chat. Para isso:"
 
 msgid "On your RocketChat, go to <b>Administration > Omnichannel</b> and enable the Omnichannel."
-msgstr ""
+msgstr "No Rocket.Chat, vá para <b>Administração > Omnichannel</b> e habilite o Omnichannel."
 
 #, python-format
 msgid "Install your %(brand)s Channel app from marketplace."
-msgstr ""
+msgstr "Instale seu %(brand)s Channel app do marketplace."
 
 msgid "Open the app details, at <b>Administration > Apps > app</b>, and in its settings section put the following token on the <b>App's Secret</b> field:"
-msgstr ""
+msgstr "Vá para \"detalhes\", em <b>Administração > Apps > app</b>, e na seção \"configurações\" coloque o seguinte token no campo <b>App's Secret</b>:"
 
 #, python-format
 msgid "Your new secret: <code>%(secret)s</code>."
-msgstr ""
+msgstr "Seu código secreto: <code>%(secret)s</code>"
 
 #, python-format
 msgid "Save the changes, copy the app's URL and back to %(brand)s by pasting that URL on field below, so try connect."
-msgstr ""
+msgstr "Salve as alterações, copie a URL do app e, de volta no %(brand)s, cole a URL no campo abaixo, e tente connectar."
 
 #, fuzzy, python-format
 #| msgid ""
