--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TextIt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-17 22:29+0000\n"
+"POT-Creation-Date: 2020-09-18 21:22+0000\n"
 "PO-Revision-Date: 2014-09-24 19:56+0000\n"
 "Last-Translator: TextIt <info@textit.in>\n"
 "Language-Team: Spanish (http://www.transifex.com/projects/p/textit/language/es/)\n"
@@ -3766,32 +3766,35 @@ msgstr "El grupo único para exportar"
 msgid "The search query"
 msgstr ""
 
-msgid "Import file appears to be empty"
+msgid "Import file appears to be empty."
 msgstr ""
 
-msgid "Import file contains an empty header"
-msgstr ""
-
-#, python-format
-msgid "Import files can contain a maximum of %(max)d records"
-msgstr ""
-
-msgid "Import file doesn't contain any records"
+msgid "Import file contains an empty header."
 msgstr ""
 
 #, python-format
-msgid "Import header %(header)s occurs more than once"
+msgid "Import files can contain a maximum of %(max)d records."
+msgstr ""
+
+msgid "Import file doesn't contain any records."
 msgstr ""
 
 #, fuzzy, python-format
 #| msgid "Using a Local Number"
-msgid "%(scheme)s is not a valid URN scheme"
+msgid "Header '%(header)s' is not a valid URN type."
 msgstr "Con un número local"
 
 #, fuzzy, python-format
 #| msgid "Using a Local Number"
-msgid "%(name)s is not a valid field name"
+msgid "Header '%(header)s' is not a valid field name."
 msgstr "Con un número local"
+
+#, python-format
+msgid "Header '%(header)s' is duplicated."
+msgstr ""
+
+msgid "Import files must contain either UUID or a URN header."
+msgstr ""
 
 #, python-format
 msgid "Invalid query syntax at '%(token)s'"
@@ -9396,14 +9399,11 @@ msgstr "Mostrar Contactos"
 
 #, fuzzy
 #| msgid "You can import your contacts from an XLS file you create in Excel."
-msgid "You can import your contacts from an XLSX file you create in Excel."
+msgid "You can import contacts from an Excel spreadsheet or comma separated values file."
 msgstr "Puede importar sus contactos de un archivo XLS que haya creado en Excel. "
 
-msgid "Columns starting with the prefix <i>Group:</i> are ignored"
-msgstr ""
-
 #, python-format
-msgid "You can download <a href=\"%(sample_url)s\">this Excel template</a> as a sample."
+msgid "You can download <a href=\"%(sample_url)s\">this Excel template</a> as a sample. Note that blank values will be ignored. If you want to explicitly clear values use <code>%(code)s</code>."
 msgstr ""
 
 #, fuzzy
@@ -13160,6 +13160,11 @@ msgstr "Ingrese el código de pedido"
 #, python-brace-format
 msgid "Found ${count} for ${query}"
 msgstr ""
+
+#, fuzzy
+#~| msgid "You can import your contacts from an XLS file you create in Excel."
+#~ msgid "You can import your contacts from an XLSX file you create in Excel."
+#~ msgstr "Puede importar sus contactos de un archivo XLS que haya creado en Excel. "
 
 #~ msgid "Unblock"
 #~ msgstr "Desbloquear"
