--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TextIt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-08-11 20:41+0000\n"
+"POT-Creation-Date: 2020-09-20 04:11+0000\n"
 "PO-Revision-Date: 2014-09-24 19:56+0000\n"
 "Last-Translator: TextIt <info@textit.in>\n"
 "Language-Team: Spanish (http://www.transifex.com/projects/p/textit/language/es/)\n"
@@ -1338,6 +1338,36 @@ msgstr ""
 "        Puede contactar a su agente de ventas para establecer el URL de devolución de llamadas sobre entrega en su cuenta Infobip.\n"
 "\n"
 "      "
+
+msgid "A channel type that allows you to use the Discord proxy TODO link"
+msgstr ""
+
+msgid "Authentication Token"
+msgstr ""
+
+msgid "The discord bot token"
+msgstr ""
+
+#, fuzzy
+#| msgid "API Log"
+msgid "Proxy URL"
+msgstr "Log API"
+
+msgid "The URL on which the discord proxy is running"
+msgstr ""
+
+msgid "A Discord channel for this bot already exists on your account."
+msgstr ""
+
+#, fuzzy
+#| msgid "Invalid claim code, please check and try again."
+msgid "Couldn't log in using that bot token. Please check and try again"
+msgstr "Código de pedido inválido, por favor, verifique e inténtelo nuevamente."
+
+#, fuzzy
+#| msgid "We encountered an error removing your channel, please try again later."
+msgid "An error occurred accessing the Discord API. Please try again"
+msgstr "Encontramos un error para retirar su transmisor, por favor, inténtelo nuevamente más tarde."
 
 #, fuzzy
 msgid ""
@@ -2686,9 +2716,6 @@ msgid ""
 "    messages."
 msgstr ""
 
-msgid "Authentication Token"
-msgstr ""
-
 msgid "The Authentication token for your Telegram Bot"
 msgstr ""
 
@@ -3641,6 +3668,11 @@ msgstr "ID externo"
 #, fuzzy
 #| msgid "External ID"
 msgid "VK identifier"
+msgstr "ID externo"
+
+#, fuzzy
+#| msgid "External ID"
+msgid "Discord identifier"
 msgstr "ID externo"
 
 msgid "Label"
@@ -12848,6 +12880,10 @@ msgstr "Ingrese el código de pedido"
 msgid "Found ${count} for ${query}"
 msgstr ""
 
+#, fuzzy, python-format
+#~ msgid "Logged in as %(name)s"
+#~ msgstr "Participar en %(name)s"
+
 #, fuzzy
 #~| msgid "UUID"
 #~ msgid "ID"
@@ -12928,12 +12964,12 @@ msgstr ""
 #~ msgid "Empty user access token!"
 #~ msgstr "Token de acceso desde su repositorio"
 
-#, fuzzy, python-brace-format
+#, fuzzy
 #~| msgid "Invalid group or contact id"
 #~ msgid "Unable to parse the date '{self.value}'"
 #~ msgstr "ID del grupo o contacto inválido "
 
-#, fuzzy, python-brace-format
+#, fuzzy
 #~| msgid "Unknown alert type: %(alert)s"
 #~ msgid "Unknown location type: '{field.value_type}'"
 #~ msgstr "Tipo de alerta desconocido: %(alert)s"
@@ -13075,7 +13111,7 @@ msgstr ""
 #~ msgid "Channel Alarms (low battery, loss of connectivity)"
 #~ msgstr "Alarmas transmitidas (baja batería, pérdida de conexión)"
 
-#, fuzzy, python-format
+#, fuzzy
 #~| msgid ""
 #~| "\n"
 #~| "    Your email address is <span class='attn'>%(email)s</span>.\n"
@@ -13205,7 +13241,7 @@ msgstr ""
 #~ "\n"
 #~ "        "
 
-#, fuzzy, python-format
+#, fuzzy
 #~| msgid ""
 #~| "\n"
 #~| "        You can connect your <a href=\"http://infobip.com\">Infobip</a> number by entering your number, username and password\n"
@@ -14459,11 +14495,6 @@ msgstr ""
 
 #~ msgid "The key for your Vumi conversation, can be found in the URL"
 #~ msgstr "La clave para su conversación de Vumi, se puede encontrar en el URL"
-
-#, fuzzy
-#~| msgid "API Log"
-#~ msgid "API URL"
-#~ msgstr "Log API"
 
 #~ msgid "Connect Vumi"
 #~ msgstr "Conectar Vumi"
@@ -16510,10 +16541,6 @@ msgstr ""
 
 #~ msgid "Get started today, no credit card required!"
 #~ msgstr "Empiece hoy, ¡no se requiere tarjeta de crédito!"
-
-#, fuzzy
-#~ msgid "Logged in as %(name)s"
-#~ msgstr "Participar en %(name)s"
 
 #~ msgid "phone"
 #~ msgstr "teléfono"
